--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,12 +10,14 @@
     <% number = 1 %>
     <div class="flex">
         <% @users.each do |u| %>
-        <div class="user-in">
-            <p>プロフィール No.<%= number %></p>
-            <p><%= u.email %>さん</p>
-            <p><%= link_to 'ユーザーページへ', user_path(u.id) %></p>
-        </div>
-        <% number += 1 %>
+            <% unless current_user.email == u.email %> <!--自分のアカウントはユーザー一覧に載せない時追加-->
+                <div class="user-in">
+                    <p>プロフィール No.<%= number %></p>
+                    <p><%= u.email %>さん</p>
+                    <p><%= link_to 'ユーザーページへ', user_path(u.id) %></p>
+                </div>
+                <% number += 1 %>
+            <% end %> <!--自分のアカウントはユーザー一覧に載せない時追加-->
         <% end %>
     </div>
 
